--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -5,6 +5,7 @@
 
 
 @import "fonts";
+@import "ionicons";
 @import "bits";
 @import "mixins";
 @import "base";
@@ -14,3 +15,4 @@
 @import "footer";
 @import "home";
 @import "product";
+@import "contact";
