--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -47,13 +47,20 @@
 }
 
 .hero__text {
-  width: 80%;
   font-size: 2em;
   z-index:1;
   position: relative;
   text-shadow:0 0 3px $green;
-  margin:1.25em 0 2.5em;
-  max-width: 9em;
+  margin:1.25em 0 1.25em;
+  
+  @include bp($s1){
+    width:80%;
+    max-width: 9em;
+  }
+  @include bp($s2) {
+    margin-bottom: 2.5em;
+  }
+
 }
 .hero__text__title {
   margin:0;
@@ -95,24 +102,24 @@
   float:right;
   display: inline-block;
   margin-top: .5em;
+  margin-right: .333em;
 }
 
 .hero__figure {
-  position: absolute;
-  right:-3em;
-  bottom:0;
   margin:0;
-  padding:0;
-  width:20em;
-  overflow: hidden;
-  z-index: 0;
   img {
     display: block;
   }
   @include bp($s1) {
-    width:35em;
+    position: absolute;
     right:-5em;
-  }
+    bottom:0;
+    margin:0;
+    padding:0;
+    width: 35em;
+    overflow: hidden;
+    z-index: 0;
+   }
   @include bp($s2) {
     width:58em;
     right:-8em;
