--- a/assets/styles/_bits.scss
+++ b/assets/styles/_bits.scss
@@ -7,7 +7,7 @@ $white: #fff;
 
 $gray: #a7a5bc;
 $graymixed: #d2d3d4;
-$graylight: #e6e7e8; //main text color 
+$graylight: #e6e7e8; 
 
 $green: #86a63f;
 $greenlight: #e7edd9;
@@ -32,7 +32,7 @@ $s4: 1280px;
 $s5: 1600px;
 
 $narrowmax: 890px;
-$normalmax: 1140px;
+$normalmax: 1090px;
 $widemax: 1360px;
 
 
