--- a/assets/styles/_contact.scss
+++ b/assets/styles/_contact.scss
@@ -3,7 +3,7 @@
   padding:0;
   img {
     display: block;
-    border-radius: .75em .75em 0 0;
+    border-radius: .5em .5em;
   }
 }
 .contact__content {
@@ -137,3 +137,8 @@ textarea {
     background-color: $blue;
   }
 }
+
+
+
+
+
