--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -51,14 +51,14 @@
   z-index:1;
   position: relative;
   text-shadow:0 0 3px $green;
-  margin:1.25em 0 1.25em;
+  margin:1.25em auto 1.25em;
+  max-width: 9em;
   
   @include bp($s1){
-    width:80%;
-    max-width: 9em;
+
   }
   @include bp($s2) {
-    margin-bottom: 2.5em;
+    margin:1.25em 0 2.5em;
   }
 
 }
@@ -73,7 +73,7 @@
   span {
     color:$blue;
   }
-  @include bp($s1){
+  @include bp($s2){
     padding:1.5rem 1rem 1.333rem 1.5rem;
     margin-right: 4rem;
   }
@@ -84,7 +84,7 @@
   margin:1.5rem 0 0;
   font-size: .75em;
   line-height: 1.2;
-  @include bp($s1){
+  @include bp($s2){
     margin:1.5rem 0 0 1.5rem;
   }
 
@@ -106,21 +106,23 @@
 }
 
 .hero__figure {
-  margin:0;
+  margin:0 auto;
+  max-width: 28em;
   img {
     display: block;
   }
   @include bp($s1) {
+
+
+   }
+  @include bp($s2) {
+    max-width: none;
     position: absolute;
-    right:-5em;
     bottom:0;
     margin:0;
     padding:0;
-    width: 35em;
     overflow: hidden;
-    z-index: 0;
-   }
-  @include bp($s2) {
+    z-index: 0;    
     width:58em;
     right:-8em;
 
