--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -41,9 +41,42 @@
 
 
 /********* Hero ***/
+.owl-theme .owl-controls {
+  position: absolute;
+  left:0;
+  right:0;
+  margin-top: 1em;
+}
+
+.owl-theme .owl-controls .owl-page span {
+  background-color: transparent;
+  border:2px solid $blue;
+}
+
+.owl-theme .owl-controls .owl-page.active span {
+  background-color: $blue;
+  //border:1px solid $blue;
+}
+
+
 .hero {
   background-color: $green;
   color:#fff;
+
+  @include bp($s2) {
+    background-color: transparent;
+    background-image: linear-gradient(to bottom, transparent 0, transparent 3em, $green 3em);
+    margin-top: -3em;
+  }
+}
+
+.hero__item {
+  @include bp($s2) {
+  }
+  @include bp($s3) {
+  }
+  @include bp($s4) {
+  }
 }
 
 .hero__text {
@@ -52,13 +85,19 @@
   position: relative;
   text-shadow:0 0 3px $green;
   margin:1.25em auto 1.25em;
-  max-width: 9em;
+  max-width: 11em;
   
   @include bp($s1){
-
+    
   }
   @include bp($s2) {
-    margin:1.25em 0 2.5em;
+    margin:3.25em 0 2.5em;
+
+    max-width: 9em;
+    float:left;
+    height:10em;
+    padding-bottom: 2em;
+    text-overflow: ellipsis;
   }
 
 }
@@ -70,6 +109,7 @@
   line-height: 1.25;
   font-weight: 900;
   text-transform: uppercase;
+  text-align: right;
   span {
     color:$blue;
   }
@@ -105,31 +145,76 @@
   margin-right: .333em;
 }
 
+// .hero__figure {
+//   margin:0 auto;
+//   max-width: 28em;
+//   img {
+//     display: block;
+//   }
+//   @include bp($s1) {
+
+
+//    }
+//   @include bp($s2) {
+//     max-width: none;
+//     position: absolute;
+//     bottom:0;
+//     margin:0;
+//     padding:0;
+//     overflow: hidden;
+//     z-index: 0;    
+//     width:58em;
+//     right:-8em;
+
+//   }
+//   @include bp($s3) {
+//   }
+//   @include bp($s4) {
+//     right:0;
+//   } 
+// }
+
+
 .hero__figure {
   margin:0 auto;
+  padding:0;
   max-width: 28em;
   img {
     display: block;
+     height:12em;
+    max-width: none;
+    width:auto;
+    margin:0 auto; 
   }
   @include bp($s1) {
 
 
    }
   @include bp($s2) {
-    max-width: none;
+    margin:0;
+    text-align: right;
     position: absolute;
     bottom:0;
-    margin:0;
-    padding:0;
-    overflow: hidden;
-    z-index: 0;    
-    width:58em;
-    right:-8em;
+    top:0;
+    right:0;
+    z-index:0;
+    img {
+      margin:0;
+      display: block;
+      height:100%;
+      max-width: none;
+      width:auto;
+      float:right;
 
+    }
   }
+
   @include bp($s3) {
+    img {
+
+    }
   }
   @include bp($s4) {
-    right:0;
+    //right:0;
   } 
 }
