--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,6 +1,5 @@
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
-// abower:scss
-// @import "../../bower_components/bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
+// bower:scss
 // endbower
 
 @import "fonts";
