--- a/assets/styles/_navigation.scss
+++ b/assets/styles/_navigation.scss
@@ -57,7 +57,8 @@ input[type="checkbox"]#navtoggle {
 }
 
 /* header */
-.navbar { 
+.navbar {
+	@include clearfix(); 
 	background-color: #fff;
 	z-index: 10;
 
