--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -19,23 +19,30 @@
   bottom:0;
   margin:0;
   padding:0;
-  width:21em;
+  width:50%;
+  height:10em;
   overflow: hidden;
   z-index: 0;
+  text-align: right;
   img {
-    display: block;
+    display: inline-block;
+    max-width: none;
+    width:auto;
+    height:100%;
+    
   }
   @include bp($s1) {
-    width: 23em;
-  }
-  @include bp($s2) {
     right:2em;
   }
+  @include bp($s2) {
+    right:24%;
+  }
   @include bp($s3) {
-    right:3em;
+    //right:3em;
+    height:11em;
   }
   @include bp($s4) {
-    right:4em;
+    //right:4em;
   }
 }
 
@@ -81,7 +88,7 @@
 .hero__item {
   background-position: center bottom;
   background-repeat: no-repeat;
-  background-size: auto 9em;
+  background-size: auto 13em;
   @include bp($s2) {
     background-size: auto 100%;
     background-position: 100% bottom;
@@ -99,7 +106,7 @@
   text-shadow:0 0 3px $green;
   margin:1.25em auto;
   max-width: 11em;
-  height:12em;
+  height:14em;
   text-overflow: ellipsis;  
 
   @include bp($s1){
@@ -121,7 +128,8 @@
   line-height: 1.25;
   font-weight: 900;
   text-transform: uppercase;
-  text-align: right;
+  text-align: left;
+
   span {
     color:$blue;
   }
@@ -151,9 +159,13 @@
   font-weight: 900;
   text-transform: uppercase;
   font-size: .666em;
-  float:right;
+  //float:right;
   display: inline-block;
-  margin-top: .5em;
-  margin-right: .333em;
+  //margin-top: .5em;
+  //margin-right: .333em;
+  //margin-left: 1em;
+  &:before {
+    content: ' ';
+  }
 }
 
