--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -10,7 +10,10 @@
   z-index:1;
   position: relative;
   text-shadow:0 0 3px $green;
-  margin:1.25em 0;
+  margin:1.125em 0;
+  @include bp($s3) {
+    margin:1.25em 0;
+  }
 }
 
 .pageheader__figure {
