--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -100,4 +100,25 @@ a {
 
 
 
+table {
+	border:2px solid $blue;
+	width:100%;
+	margin:1em 0;
+}
 
+
+th,td {
+	font-size:.75em;
+	line-height: 1;
+	padding:.875em .5em;
+	border:2px solid $blue;
+	text-align: center;
+}
+
+th {
+	font-weight: 900;
+	font-style: italic;
+}
+td {
+	font-weight: 500;
+}
